[package]
name = "nobodywho-godot"
version = "6.1.5"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
nobodywho = { path = "../core" }
godot = { version = "0.3.5", features = [ "register-docs", "experimental-threads" ] }
tokio = "1.44.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_json = { version = "1.0.140", features = [ "preserve_order" ] }
